@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 12
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam rectangle {
  BorderColor #344054
  FontColor #101828
}
skinparam package {
  BorderColor #667085
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure - Manage equipment
skinparam class {
 BorderColor #344054
 FontColor #101828
 BackgroundColor #F9FAFB
}
class Equipment {
 +Guid Id
 +string Name
 +string Description
 +int Quantity
 +Money? ReferenceRentalRate
 +long Version
 +Update(name: string, quantity: int): void
}
class Money <<value object>> {
 +decimal Amount
 +string Currency
 +RoundToCents(): Money
}
Equipment ..> Money : uses CAD arithmetic
interface IStudioStore {
 +Run<T>(lockKey, action): Task<T>
}
interface IStudioTransaction {
 +Get<T>(id): Task<T?>
 +List<T>(): Task<T[]>
 +Save<T>(value, expectedVersion): Task
}
IStudioStore ..> IStudioTransaction : scopes one committed unit of work
IStudioStore o-- Equipment : persists or supplies inputs
@enduml
